Fix for bug#4312 ndb table, wrong behaviour on insert .. on duplicate key ..